--- a/reference/Flux.ipynb
+++ b/reference/Flux.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "36740fc0-1a10-491b-9605-9f28761421fd",
    "metadata": {
     "tags": []
@@ -20,7 +20,7 @@
        "\u001b[90m          # plus 1 non-trainable, 64 parameters, summarysize \u001b[39m68.406 KiB."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "5902b044-e42a-43d8-88d6-624968d3b473",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_and_accuracy(net, test_data) = (loss = 2.5960243f0, acc = 8.38, split = :test)\n"
+      "loss_and_accuracy(net, test_data) = (loss = 2.5598094f0, acc = 10.25, split = :test)\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "08814dad-ee1a-4410-a3b3-4ea58e7a9332",
    "metadata": {
     "tags": []
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  6.067303 seconds (829.05 k allocations: 2.649 GiB, 15.57% gc time, 16.97% compilation time)\n"
+      " 27.423572 seconds (22.11 M allocations: 4.003 GiB, 2.64% gc time, 84.04% compilation time)\n"
      ]
     },
     {
@@ -105,15 +105,15 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m1\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 94.94\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.65\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 89.85\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 90.6\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5.506500 seconds (536.54 k allocations: 2.633 GiB, 5.63% gc time)\n"
+      "  4.149552 seconds (541.34 k allocations: 2.633 GiB, 17.07% gc time)\n"
      ]
     },
     {
@@ -121,15 +121,15 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m2\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 95.34\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.94\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 92.08\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 92.39\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5.992735 seconds (536.54 k allocations: 2.633 GiB, 15.73% gc time)\n"
+      "  4.180516 seconds (541.34 k allocations: 2.633 GiB, 16.30% gc time)\n"
      ]
     },
     {
@@ -137,15 +137,15 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m3\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 95.68\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 95.01\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 93.18\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 93.3\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4.804795 seconds (536.54 k allocations: 2.633 GiB, 6.50% gc time)\n"
+      "  3.767926 seconds (541.34 k allocations: 2.633 GiB, 6.69% gc time)\n"
      ]
     },
     {
@@ -153,15 +153,15 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m4\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 95.93\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 95.44\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 93.87\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.06\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4.682319 seconds (536.54 k allocations: 2.633 GiB, 6.96% gc time)\n"
+      "  3.684514 seconds (541.34 k allocations: 2.633 GiB, 6.52% gc time)\n"
      ]
     },
     {
@@ -169,8 +169,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m5\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 96.21\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 95.6\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 94.54\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.43\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "ab6d130e-1436-4ec9-8dc1-d5af2540b259",
    "metadata": {
     "tags": []
@@ -210,8 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hcat(Flux.onecold(y1hat, 0:9), Flux.onecold(y1, 0:9)) = [9 3]\n",
-      "loss_and_accuracy(net, train_data) = (loss = 0.13418642f0, acc = 96.21, split = :train)\n"
+      "hcat(Flux.onecold(y1hat, 0:9), Flux.onecold(y1, 0:9)) = [7 5]\n",
+      "loss_and_accuracy(net, train_data) = (loss = 0.191709f0, acc = 94.54, split = :train)\n"
      ]
     }
    ],
@@ -226,100 +226,6 @@
     "\n",
     "@show loss_and_accuracy(net, train_data);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "5608790d-f1d5-4ac5-a932-8400b3ec23ae",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: `ŷ` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `ŷ` not defined",
-      ""
-     ]
-    }
-   ],
-   "source": [
-    "ŷ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "bd80f347-97be-4328-be94-0a623404e1d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10×1 Matrix{Float32}:\n",
-       " -1.5439503\n",
-       "  0.32302755\n",
-       "  2.0229397\n",
-       " -0.14970115\n",
-       " -2.5560298\n",
-       "  4.495308\n",
-       " -2.9564798\n",
-       "  2.5527892\n",
-       " -0.7681055\n",
-       "  1.46721"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y2hat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a855c902-de9e-4322-8292-44b7456a95e3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10×1 Matrix{Float32}:\n",
-       "  7.5319905\n",
-       " -2.5360425\n",
-       "  1.3435442\n",
-       "  1.7613591\n",
-       " -3.7410812\n",
-       "  3.890618\n",
-       " -2.5021336\n",
-       " -2.069571\n",
-       "  1.9236335\n",
-       " -0.4906675"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y1hat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c735c4cf-077b-4371-b729-c6c9bab55b61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
