--- a/reference/Flux.ipynb
+++ b/reference/Flux.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "36740fc0-1a10-491b-9605-9f28761421fd",
    "metadata": {
     "tags": []
@@ -20,7 +20,7 @@
        "\u001b[90m          # plus 1 non-trainable, 64 parameters, summarysize \u001b[39m68.406 KiB."
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5902b044-e42a-43d8-88d6-624968d3b473",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_and_accuracy(net, test_data) = (loss = 2.5598094f0, acc = 10.25, split = :test)\n"
+      "loss_and_accuracy(net, test_data) = (loss = 2.4164934f0, acc = 10.14, split = :test)\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "08814dad-ee1a-4410-a3b3-4ea58e7a9332",
    "metadata": {
     "tags": []
@@ -97,7 +97,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 27.423572 seconds (22.11 M allocations: 4.003 GiB, 2.64% gc time, 84.04% compilation time)\n"
+      "  7.463706 seconds (833.63 k allocations: 2.647 GiB, 12.72% gc time, 22.46% compilation time)\n",
+      "  6.676800 seconds (541.34 k allocations: 2.630 GiB, 4.97% gc time)\n"
      ]
     },
     {
@@ -105,31 +106,18 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m1\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 89.85\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 90.6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  4.149552 seconds (541.34 k allocations: 2.633 GiB, 17.07% gc time)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 89.62\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 90.08\n",
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m2\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 92.08\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 92.39\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 91.87\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 92.28\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4.180516 seconds (541.34 k allocations: 2.633 GiB, 16.30% gc time)\n"
+      "  5.012503 seconds (541.34 k allocations: 2.630 GiB, 6.92% gc time)\n"
      ]
     },
     {
@@ -137,15 +125,15 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m3\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 93.18\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 93.3\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 92.96\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 93.27\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  3.767926 seconds (541.34 k allocations: 2.633 GiB, 6.69% gc time)\n"
+      "  4.644309 seconds (541.34 k allocations: 2.630 GiB, 6.81% gc time)\n"
      ]
     },
     {
@@ -153,15 +141,15 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m4\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 93.87\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.06\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 93.71\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 93.87\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  3.684514 seconds (541.34 k allocations: 2.633 GiB, 6.52% gc time)\n"
+      "  4.552978 seconds (541.34 k allocations: 2.630 GiB, 7.21% gc time)\n"
      ]
     },
     {
@@ -169,8 +157,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m5\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 94.54\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.43\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 94.27\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.36\n"
      ]
     }
    ],
@@ -200,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "ab6d130e-1436-4ec9-8dc1-d5af2540b259",
    "metadata": {
     "tags": []
@@ -210,8 +198,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hcat(Flux.onecold(y1hat, 0:9), Flux.onecold(y1, 0:9)) = [7 5]\n",
-      "loss_and_accuracy(net, train_data) = (loss = 0.191709f0, acc = 94.54, split = :train)\n"
+      "hcat(Flux.onecold(y1hat, 0:9), Flux.onecold(y1, 0:9)) = [9 3]\n",
+      "loss_and_accuracy(net, train_data) = (loss = 0.19802083f0, acc = 94.27, split = :train)\n"
      ]
     }
    ],
@@ -226,6 +214,14 @@
     "\n",
     "@show loss_and_accuracy(net, train_data);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5719344c-316a-4f40-a6f0-e7252d8825f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
