--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "376f13c6-8683-4dca-8ddf-9fbd29bf63d7",
    "metadata": {
     "tags": []
@@ -13,17 +13,17 @@
      "output_type": "stream",
      "text": [
       "Epoch: 1\n",
-      "Train accuracy: 0.6426\n",
+      "Train accuracy: 0.7005\n",
       "Epoch: 2\n",
-      "Train accuracy: 0.8283\n",
+      "Train accuracy: 0.8581\n",
       "Epoch: 3\n",
-      "Train accuracy: 0.8718\n",
+      "Train accuracy: 0.8881\n",
       "Epoch: 4\n",
-      "Train accuracy: 0.8911\n",
+      "Train accuracy: 0.9013\n",
       "Epoch: 5\n",
-      "Train accuracy: 0.9021\n",
-      "135.051066 seconds (176.78 M allocations: 84.490 GiB, 29.06% gc time, 0.61% compilation time)\n",
-      "Test accuracy: 0.9098\n",
+      "Train accuracy: 0.9101\n",
+      "134.950624 seconds (183.40 M allocations: 85.050 GiB, 31.85% gc time, 0.68% compilation time: 1% of which was recompilation)\n",
+      "Test accuracy: 0.9169\n",
       "\n"
      ]
     }
@@ -53,15 +53,27 @@
     "    batch_size = UInt32(100),\n",
     ")\n",
     "\n",
+    "activation_fun_rnn=tanh #tanh relu identity\n",
+    "activation_fun_dense=identity\n",
+    "\n",
     "wxh = Variable(xavier_init( rnn_settings.hidden,rnn_settings.input)) \n",
-    "dense1 = Variable(xavier_init( rnn_settings.output,rnn_settings.hidden))\n",
     "whh=Variable(zeros(Float32,rnn_settings.hidden,rnn_settings.hidden))\n",
     "b = Variable(zeros(Float32, rnn_settings.hidden))\n",
-    "net = RNN_(wxh,whh,b, dense1)\n",
+    "dense1 = Variable(xavier_init( rnn_settings.output,rnn_settings.hidden))\n",
+    "dense_b = Variable(zeros(Float32, rnn_settings.output))\n",
+    "net = RNN_(wxh,whh,b, dense1,dense_b)\n",
     "\n",
-    "train(net, x_train, y_train, settings,rnn_settings)\n",
-    "test(net, x_test, y_test,rnn_settings)"
+    "train(net, x_train, y_train, settings,rnn_settings,activation_fun_rnn,activation_fun_dense)\n",
+    "test(net, x_test, y_test,rnn_settings,activation_fun_rnn,activation_fun_dense)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c185ce1-ac49-46f0-9857-e8fb9df6a793",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
