--- a/reference/Flux.ipynb
+++ b/reference/Flux.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "36740fc0-1a10-491b-9605-9f28761421fd",
    "metadata": {
     "tags": []
@@ -20,7 +20,7 @@
        "\u001b[90m          # plus 1 non-trainable, 64 parameters, summarysize \u001b[39m68.406 KiB."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "5902b044-e42a-43d8-88d6-624968d3b473",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss_and_accuracy(net, test_data) = (loss = 2.4164934f0, acc = 10.14, split = :test)\n"
+      "loss_and_accuracy(net, test_data) = (loss = 2.4205868f0, acc = 7.09, split = :test)\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "08814dad-ee1a-4410-a3b3-4ea58e7a9332",
    "metadata": {
     "tags": []
@@ -97,8 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7.463706 seconds (833.63 k allocations: 2.647 GiB, 12.72% gc time, 22.46% compilation time)\n",
-      "  6.676800 seconds (541.34 k allocations: 2.630 GiB, 4.97% gc time)\n"
+      " 32.664865 seconds (22.32 M allocations: 4.014 GiB, 2.37% gc time, 86.20% compilation time)\n"
      ]
     },
     {
@@ -106,18 +105,31 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m1\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 89.62\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 90.08\n",
-      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m2\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 91.87\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 92.28\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 89.18\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 89.67\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5.012503 seconds (541.34 k allocations: 2.630 GiB, 6.92% gc time)\n"
+      "  5.066357 seconds (541.34 k allocations: 2.630 GiB, 19.82% gc time)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m2\n",
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 91.81\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 91.86\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  4.946033 seconds (541.34 k allocations: 2.630 GiB, 6.53% gc time)\n"
      ]
     },
     {
@@ -126,14 +138,14 @@
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m3\n",
       "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 92.96\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 93.27\n"
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 92.8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4.644309 seconds (541.34 k allocations: 2.630 GiB, 6.81% gc time)\n"
+      "  4.472514 seconds (541.34 k allocations: 2.630 GiB, 15.37% gc time)\n"
      ]
     },
     {
@@ -141,15 +153,15 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m4\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 93.71\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 93.87\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 93.83\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 93.71\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4.552978 seconds (541.34 k allocations: 2.630 GiB, 7.21% gc time)\n"
+      "  4.054009 seconds (541.34 k allocations: 2.630 GiB, 6.33% gc time)\n"
      ]
     },
     {
@@ -157,8 +169,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m5\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 94.27\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.36\n"
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  acc = 94.4\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  test_acc = 94.17\n"
      ]
     }
    ],
@@ -188,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ab6d130e-1436-4ec9-8dc1-d5af2540b259",
    "metadata": {
     "tags": []
@@ -198,8 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hcat(Flux.onecold(y1hat, 0:9), Flux.onecold(y1, 0:9)) = [9 3]\n",
-      "loss_and_accuracy(net, train_data) = (loss = 0.19802083f0, acc = 94.27, split = :train)\n"
+      "hcat(Flux.onecold(y1hat, 0:9), Flux.onecold(y1, 0:9)) = [7 2]\n",
+      "loss_and_accuracy(net, train_data) = (loss = 0.1983531f0, acc = 94.4, split = :train)\n"
      ]
     }
    ],
